[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-proxy"
version = "0.1.0"
description = "Local HTTP proxy for recording OpenAI-compatible LLM traffic."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "llm_proxy maintainers" }
]
dependencies = []

[project.scripts]
llm-proxy = "llm_proxy.cli:main"

[tool.setuptools.packages.find]
include = ["llm_proxy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

